--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,9 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{{ site.url }}/css/fluidbox.min.css">
+  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/fluidbox/2.0.0/jquery.fluidbox.min.js"></script>
+  <script src="{{ site.url }}/js/main.js"></script>
 </head>
