--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   </header>
 
   <div class="post-content" itemprop="articleBody">
-  	<img class="cover-image" src="{{ page.image }}" />
+  	<img class="cover-image" src="{{site.url}}{{ page.image }}" />
     {{ content }}
   </div>
 
