--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header class="site-header">
 
-  <h1>Ricardo<br /><em>Unreal</em> Sousa</h1>
+  <a href="/" class="title"><h1>Ricardo<br /><em>Unreal</em> Sousa</h1></a>
   <ul class="contact-links">
     {% for item in site.contact %}
       <li>
         <i class="fa fa-{{ item[1].icon }}"></i>
-        <a href="{{ item[1].url }}">
+        <a href="{{ item[1].url }}" target="_blank">
           {{ item[1].text }}
         </a>
       </li>
