--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,9 @@ em {
 i.fa { margin-right: 6px; }
 
 /* -- Style -- */
+a { color: #000 }
+a:hover { color: #666 }
+.title { text-decoration: none; }
 .page-content {
   max-width: 100%;
   width: 800px;
@@ -37,7 +40,6 @@ i.fa { margin-right: 6px; }
   position: relative;
   display: block;
   width: 100%;
-  background: #000;
   overflow: hidden;
   margin-bottom: 1em;
   color: #fff;
@@ -50,6 +52,10 @@ i.fa { margin-right: 6px; }
     margin: 0;
     font-size: 16pt;
     font-weight: normal;
+
+    padding: .5em;
+    background: rgba(0,0,0,.5);
+    color :#fff;
   }
 }
   
@@ -60,4 +66,10 @@ i.fa { margin-right: 6px; }
 }
 .post-content img {
     min-height: 0;
+    box-shadow: 0 2px 16px rgba(0,0,0,.2);
+    margin: 1em 0;
+}
+img.cover-image {
+  box-shadow: none;
+  margin: 0;
 }
