--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -44,6 +44,15 @@ a:hover { color: #666 }
   margin-bottom: 1em;
   color: #fff;
   text-decoration: none;
+  min-height: 300px;
+  background-size: 100% 100%;
+  background-position: center center;
+  box-shadow: inset 0 0 32px rgba(0,0,0,.2);
+  transition: background-size 1s;
+
+  &:hover {
+    background-size: 110% 110%;
+  }
 
   h3 {
     position: absolute;
