--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,13 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,300,700);
 @charset "utf-8";
 
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
