--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 <header class="site-header">
 
-  <a href="/" class="title"><h1>Ricardo<br /><em>Unreal</em> Sousa</h1></a>
+  <div class="top">
+    <a href="/" class="title"><h1>Ricardo<br /><em>Unreal</em> Sousa</h1></a><a href="/about/" class="about-link"><h3>About me</h3></a>
+  </div>
+
   <ul class="contact-links">
     {% for item in site.contact %}
       <li>
