--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-	Contact: <a href="mailto:{{ site.email }}">site.email</a>
+	Contact: <a href="mailto:{{ site.email }}">{{ site.email }}</a>
 </footer>
