--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,7 +3,7 @@ $color-em: #f5bc52;
 html,body {
   margin: 0;
   font-family: $base-font-family;
-  background: #fff;
+  background: #252525;
 }
 h1,h2,h3 {
   text-transform: uppercase;
