--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,6 +4,7 @@ html,body {
   margin: 0;
   font-family: $base-font-family;
   background: #252525;
+  color: #ffffff;
 }
 h1,h2,h3 {
   text-transform: uppercase;
@@ -17,8 +18,8 @@ em {
 i.fa { margin-right: 6px; }
 
 /* -- Style -- */
-a { color: #000 }
-a:hover { color: #666 }
+a { color: #ffffff }
+a:hover { color: #f5bc52 }
 .top a {
   display: inline-block;
   height: 100%;
@@ -61,6 +62,7 @@ a:hover { color: #666 }
   background-position: center center;
   box-shadow: inset 0 0 32px rgba(0,0,0,.2);
   transition: background-size 1s;
+  border-right: 6px solid #f5bc52;            //side bar
 
   &:hover {
     background-size: 110% 110%;
