--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,6 +4,7 @@ html,body {
   margin: 0;
   font-family: $base-font-family;
   background: #252525;
+  background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/debut_dark.png");
   color: #ffffff;
 }
 h1,h2,h3 {
