--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="top">
-    <a href="/" class="title"><h1>Ricardo<br /><em>Unreal</em> Sousa</h1></a><a href="/about/" class="about-link"><h3>About me</h3></a>
+    <a href="/" class="title"><h1>Ricardo de Sousa<br /><em style="font-size: 24pt;">[Level Designer]</em></h1></a><a href="/about/" class="about-link"><h3>About me</h3></a>
   </div>
 
   <ul class="contact-links">
