--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -56,7 +56,7 @@ a:hover { color: #f5bc52 }
   }
 }
 .project:hover {
-  border-right: 6px solid #ffffff;  
+  border: 2px solid #ffffff;  
 }
 
 .project {
@@ -72,7 +72,7 @@ a:hover { color: #f5bc52 }
   background-position: center center;
   box-shadow: inset 0 0 32px rgba(0,0,0,.2);
   transition: background-size 1s;
-  border-right: 6px solid #f5bc52;            //side bar
+  border: 2px solid #f5bc52;            //side bar
 
   &:hover {
     background-size: 110% 110%;
