--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -122,7 +122,7 @@ img.cover-image {
 
 footer, footer a {
   margin: 2em 0;
-  color: #666;
+  color: #ffffff;
   text-align: center;
   clear: both;
 }
