--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,13 +3,7 @@ $color-em: #f5bc52;
 html,body {
   margin: 0;
   font-family: $base-font-family;
-  background: #252525;
-  background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/black-Linen.png");
-  
-  //https://www.toptal.com/designers/subtlepatterns/patterns/black-Linen.png
-  //https://www.toptal.com/designers/subtlepatterns/patterns/debut_dark.png
-  //https://www.toptal.com/designers/subtlepatterns/patterns/dark_wall.png
-  
+  background: #1e1e1e;
   color: #ffffff;
 }
 h1,h2,h3 {
@@ -70,7 +64,7 @@ a:hover { color: #f5bc52 }
   min-height: 300px;
   background-size: 100% 100%;
   background-position: center center;
-  box-shadow: inset 0 0 32px rgba(0,0,0,.2);
+  box-shadow: inset 0 0 32px rgba(0,0,0,.2), 0 8px 32px rgba(0,0,0,.4);
   transition: background-size 1s;
   border: 2px solid #f5bc52;            //side bar
 
