--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -31,7 +31,11 @@ a:hover { color: #f5bc52 }
   width: 20%;
   text-align: right;
 
-  & h3 { font-size: 20pt }
+  & h3 { 
+    font-size: 20pt 
+    background: #00000052;
+    padding-right: 0.4em;
+  }
 }
 .page-content {
   max-width: 100%;
