reverted some dogshit
that

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -31,11 +31,7 @@ a:hover { color: #f5bc52 }
   width: 20%;
   text-align: right;
 
-  & h3 { 
-    font-size: 20pt 
-    background: #00000052;
-    padding-right: 0.4em;
-  }
+  & h3 { font-size: 20pt }
 }
 .page-content {
   max-width: 100%;
