--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    {% if post.award %}
+    {% if page.award %}
           <svg class="award-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 4.441 100 91.119"><path d="M63.257,75.08c7.7-9.412,20.802-12.173,32.368-10.357l2.417,0.379l-1.476,1.951c-7.367,9.732-20.954,12.752-32.471,10.388
 	l-2.372-0.486L63.257,75.08L63.257,75.08z"></path><path d="M66.257,5.819c8.109,6.52,12.954,17.331,10.942,27.728l-0.441,2.28l-1.865-1.38c-8.315-6.151-13.932-17.569-10.961-27.892
 	l0.61-2.115L66.257,5.819L66.257,5.819z"></path><path d="M99.677,39.284c-1.592,11.312-9.717,22.791-21.304,25.347l-2.147,0.475l0.393-2.166
