--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -102,6 +102,8 @@ a:hover { color: #f5bc52 }
     box-shadow: 0 2px 16px rgba(0,0,0,.2);
     margin: 1em 0;
 }
+.post-header { position: relative; }
+
 img.cover-image {
   box-shadow: none;
   margin: 0;
