--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,6 +18,14 @@ em {
 }
 i.fa { margin-right: 6px; }
 
+banner {
+  padding: 20px;
+  width: 400px;
+  height: auto;
+  position: absolute;
+  right: 1em;
+}
+
 /* -- Style -- */
 a { color: #ffffff }
 a:hover { color: #f5bc52 }
