--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,6 +24,11 @@ banner {
   height: auto;
   position: absolute;
   right: 1em;
+  
+  img {
+    width: 300px,
+    height: auto
+  }
 }
 
 /* -- Style -- */
