--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -26,8 +26,9 @@ banner {
   right: 1em;
   
   img {
-    width: 300px,
-    height: auto
+    width: 300px;
+    height: auto;
+    vertical-align: middle;
   }
 }
 
