--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,7 +19,7 @@ em {
 i.fa { margin-right: 6px; }
 
 banner {
-  padding: 10px;
+  padding: 10px 0px;
   width: 300px;
   height: auto;
   position: absolute;
