--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -80,7 +80,8 @@ a:hover { color: #f5bc52 }
   margin-bottom: 1em;
   color: #fff;
   text-decoration: none;
-  min-height: 300px;
+  //min-height: 300px;
+  padding-bottom: 37.5%;
   background-size: 100% 100%;
   background-position: center center;
   box-shadow: inset 0 0 32px rgba(0,0,0,.2), 0 8px 32px rgba(0,0,0,.4);
