--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -21,9 +21,11 @@ i.fa { margin-right: 6px; }
 banner {
   display: block;
   width: 350px;
-  height: 300px;
+  height: 100%;
   position: absolute;
   right: 0;
+
+
   
   img {
     display: block;
