--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -20,7 +20,7 @@ i.fa { margin-right: 6px; }
 
 banner {
   display: block;
-  width: 350px;
+  width: 40%;
   height: 100%;
   position: absolute;
   right: 0;
@@ -30,7 +30,7 @@ banner {
   img {
     display: block;
     position: relative;
-    width: 300px;
+    width: 90%;
     height: auto;
     top: 50%;
     transform: translateY(-50%);
