--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,13 +1,16 @@
 $color-em: #f5bc52;
 
-html,body {
+html,
+body {
   margin: 0;
   font-family: $base-font-family;
   text-align: justify;
   background: #1e1e1e;
   color: #ffffff;
 }
-h1,h2,h3 {
+h1,
+h2,
+h3 {
   text-transform: uppercase;
   font-size: 32pt;
   margin-bottom: 0;
@@ -16,7 +19,9 @@ em {
   color: $color-em;
   font-style: normal;
 }
-i.fa { margin-right: 6px; }
+i.fa {
+  margin-right: 6px;
+}
 
 banner {
   display: block;
@@ -25,8 +30,6 @@ banner {
   position: absolute;
   right: 0;
 
-
-  
   img {
     display: block;
     position: relative;
@@ -39,20 +42,28 @@ banner {
 }
 
 /* -- Style -- */
-a { color: #ffffff }
-a:hover { color: #f5bc52 }
+a {
+  color: #ffffff;
+}
+a:hover {
+  color: #f5bc52;
+}
 .top a {
   display: inline-block;
   height: 100%;
   width: 80%;
   text-decoration: none;
 }
-.title h1 { line-height: 0.6em }
+.title h1 {
+  line-height: 0.6em;
+}
 .top .about-link {
   width: 20%;
   text-align: right;
 
-  & h3 { font-size: 20pt }
+  & h3 {
+    font-size: 20pt;
+  }
 }
 .page-content {
   max-width: 100%;
@@ -63,7 +74,7 @@ a:hover { color: #f5bc52 }
   list-style: none;
   margin-top: 10;
   padding: 0;
-  
+
   li {
     display: inline-block;
     margin-right: 1em;
@@ -71,7 +82,7 @@ a:hover { color: #f5bc52 }
   }
 }
 .project:hover {
-  border: 0px solid #ffffff;  
+  border: 0px solid #ffffff;
 }
 
 .project {
@@ -86,9 +97,9 @@ a:hover { color: #f5bc52 }
   padding-bottom: 37.5%;
   background-size: 100% 100%;
   background-position: center center;
-  box-shadow: inset 0 0 32px rgba(0,0,0,.2), 0 8px 32px rgba(0,0,0,.4);
+  box-shadow: inset 0 0 32px rgba(0, 0, 0, 0.2), 0 8px 32px rgba(0, 0, 0, 0.4);
   transition: background-size 0.5s;
-  border: 0px solid #f5bc52;            //side bar
+  border: 0px solid #f5bc52; //side bar
 
   &:hover {
     background-size: 110% 110%;
@@ -102,10 +113,10 @@ a:hover { color: #f5bc52 }
     font-size: 16pt;
     font-weight: normal;
 
-    padding: .5em;
-    background: rgba(0,0,0,.5);
-    color :#fff;
-    
+    padding: 0.5em;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+
     img {
       width: 32px;
       height: 32px;
@@ -113,17 +124,20 @@ a:hover { color: #f5bc52 }
     }
   }
 }
-  
-.post-content img, .post-content .cover-image {
-    width: 100%;
-    background: #222;
+
+.post-content img,
+.post-content .cover-image {
+  width: 100%;
+  background: #222;
 }
 .post-content img {
-    min-height: 0;
-    box-shadow: 0 2px 16px rgba(0,0,0,.2);
-    margin: 1em 0;
+  min-height: 0;
+  box-shadow: 0 2px 16px rgba(0, 0, 0, 0.2);
+  margin: 1em 0;
 }
-.post-header { position: relative; }
+.post-header {
+  position: relative;
+}
 
 img.cover-image {
   box-shadow: none;
@@ -135,25 +149,28 @@ img.cover-image {
   max-width: 50%;
   margin: 0 1em 1em 0;
 }
-.portrait * { width: 100%; }
+.portrait * {
+  width: 100%;
+}
 
-footer, footer a {
+footer,
+footer a {
   margin: 2em 0;
   color: #ffffff;
   text-align: center;
   clear: both;
 }
 .award-icon {
-    height: 3em;
-    width: 3em;
-    position: absolute;
-    right: 1em;
-    top: 1em;
-    font-size: 16pt;
-    /* padding: .5em; */
-    /* background: rgba(0,0,0,0.4); */
-    fill: #f5bc52;
-    filter: drop-shadow(0 2px 2px rgba(0,0,0,1));
+  height: 3em;
+  width: 3em;
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  font-size: 16pt;
+  /* padding: .5em; */
+  /* background: rgba(0,0,0,0.4); */
+  fill: #f5bc52;
+  filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 1));
 }
 
 .row {
@@ -178,80 +195,81 @@ footer, footer a {
   }
 }
 
-
-div#comparison { 
+div#comparison {
   width: 60vw;
   height: 60vw;
   max-width: 600px;
   max-height: 600px;
-  overflow: hidden; }
-div#comparison figure { 
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/photoshop-face-before.jpg); 
+  overflow: hidden;
+}
+div#comparison figure {
   background-size: cover;
   position: relative;
   font-size: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
-  margin: 0; 
+  margin: 0;
 }
-div#comparison figure > img { 
+div#comparison figure > img {
   position: relative;
   width: 100%;
 }
-div#comparison figure div { 
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/photoshop-face-after.jpg);
+
+div#comparison figure div {
   background-size: cover;
   position: absolute;
-  width: 50%; 
-  box-shadow: 0 5px 10px -2px rgba(0,0,0,0.3);
+  width: 50%;
+  box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   bottom: 0;
   height: 100%;
 }
 
-input[type=range]{
-  -webkit-appearance:none;
-  -moz-appearance:none;
+input[type="range"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   position: relative;
-  top: -2rem; left: -2%;
-  background-color: rgba(255,255,255,0.1);
-  width: 102%; 
+  top: -2rem;
+  left: -2%;
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 102%;
 }
-input[type=range]:focus { 
-  outline: none; 
-}
-input[type=range]:active { 
-  outline: none;  
-}
-
-input[type=range]::-moz-range-track { 
-  -moz-appearance:none;
-    height:15px;
-    width: 98%;
-    background-color: rgba(255,255,255,0.1); 
-    position: relative;
-    outline: none;    
- }
-input[type=range]::active { 
-  border: none; 
+input[type="range"]:focus {
   outline: none;
 }
-input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance:none;
-    width: 20px; height: 15px;   
-    background: #fff;
-    border-radius: 0;
-   }
-input[type=range]::-moz-range-thumb {
+input[type="range"]:active {
+  outline: none;
+}
+
+input[type="range"]::-moz-range-track {
+  -moz-appearance: none;
+  height: 15px;
+  width: 98%;
+  background-color: rgba(255, 255, 255, 0.1);
+  position: relative;
+  outline: none;
+}
+input[type="range"]::active {
+  border: none;
+  outline: none;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 15px;
+  background: #fff;
+  border-radius: 0;
+}
+input[type="range"]::-moz-range-thumb {
   -moz-appearance: none;
   width: 20px;
   height: 15px;
   background: #fff;
   border-radius: 0;
-     }   
-input[type=range]:focus::-webkit-slider-thumb {
-    background: rgba(255,255,255,0.5);
-   }
-input[type=range]:focus::-moz-range-thumb {
-    background: rgba(255,255,255,0.5);
-   }
+}
+input[type="range"]:focus::-webkit-slider-thumb {
+  background: rgba(255, 255, 255, 0.5);
+}
+input[type="range"]:focus::-moz-range-thumb {
+  background: rgba(255, 255, 255, 0.5);
+}
