feat: add slider

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,5 +13,15 @@
       {% include footer.html %}
     </div>
 
+
+    <script>
+      function moveDivisor(dividerId, sliderId) {
+        let divider = document.getElementById(dividerId);
+        let slider = document.getElementById(sliderId);
+
+        divisor.style.width = slider.value + "%";
+      }
+    </script>
+
   </body>
 </html>
