--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         let divider = document.getElementById(dividerId);
         let slider = document.getElementById(sliderId);
 
-        divisor.style.width = slider.value + "%";
+        divider.style.width = slider.value + "%";
       }
     </script>
 
