--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -196,9 +196,9 @@ footer a {
 }
 
 div.comparison {
-  width: 60vw;
+  
   height: 60vw;
-  max-width: 600px;
+  max-width: 100%;
   max-height: 600px;
   overflow: hidden;
 }
