Updated award color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -169,7 +169,7 @@ footer a {
   font-size: 16pt;
   /* padding: .5em; */
   /* background: rgba(0,0,0,0.4); */
-  fill: #f5bc52;
+  fill: #ffd553;
   filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 1));
 }
 
